<resources>
    <string name="app_name">ktln05</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="index_fragment_text">Inbox</string>
    <string name="help_fragment_text">Help</string>
    <string name="menu_help_title">Help</string>
    <string name="menu_search_title">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="send_items_fragment">sent items</string>
    <string name="menu_inbox_title">Inbox</string>
    <string name="menu_sent_items_title">Sent Items</string>
    <string name="menu_support_item">support</string>
    <string name="drawer_header_image_description">small kitten</string>
</resources>