<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inboxFragment"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_inbox_title"
            app:showAsAction="always"/>
        <item
            android:id="@+id/sentItemsFragment"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/menu_sent_items_title"
            app:showAsAction="ifRoom"/>
    </group>
    <item
        android:id="@+id/searchFragment"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/menu_search_title"
        app:showAsAction="ifRoom"/>
    <item android:title="@string/menu_support_item">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/helpFragment"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/menu_help_title"
                    app:showAsAction="ifRoom"/>
            </group>
        </menu>
    </item>
</menu>